cluster/apps/media-stack/plex/plex-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media-stack
spec:
  selector:
    app: plex
  ports:
    - name: http
      port: 32400
      targetPort: 32400
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: media-stack
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`plex.homelab.local`)
      kind: Rule
      services:
        - name: plex
          port: 32400
